--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.6.0",
     "lucide-react": "^0.483.0",
@@ -19,7 +20,10 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.0",
-    "recharts": "^2.12.0"
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.12.0",
+    "sonner": "^2.0.3",
+    "sooner": "^1.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
